# libmuzutil

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: muztdump.cc
include/: muzutil.hpp
src/: common.hpp  muzutil.cc
